<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal"
	android:background="@android:color/white"
	>

	<ImageView android:src="@drawable/digu_logo"
		android:layout_marginTop="20dip" android:layout_marginBottom="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />


	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center_horizontal" android:id="@+id/main_login"
		>

		<EditText android:id="@+id/username_field" android:hint="@string/login_txt_input_username"
		    android:layout_marginTop="5dip"
			android:layout_width="200dip" android:layout_height="wrap_content" />

		<EditText android:id="@+id/password_field"
			android:inputType="textPassword" android:hint="@string/login_txt_input_password"
			android:layout_width="200dip" android:layout_height="wrap_content" />

		<LinearLayout android:layout_width="fill_parent"
		    android:layout_marginTop="10dip"
		    android:gravity="center_horizontal"
			android:orientation="horizontal"
			android:layout_height="fill_parent">
			<ImageButton android:id="@+id/login_button"
				android:background="@drawable/ok" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<ImageButton android:id="@+id/login_canel"
				android:background="@drawable/canel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:gravity="center_horizontal" android:id="@+id/main_menu"
        android:visibility="gone"
        >

	<LinearLayout android:id="@+id/twitter_row"
		android:layout_marginBottom="5dip" android:gravity="center_vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:src="@drawable/twitter"
			android:layout_marginRight="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:text="@string/main_digu"
			android:textSize="24sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:id="@+id/message_row"
		android:layout_marginBottom="5dip" android:gravity="center_vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:src="@drawable/mail1"
			android:layout_marginRight="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:text="@string/main_message"
			android:textSize="24sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<!-- 
		<LinearLayout android:id="@+id/bookmark_row" android:layout_marginBottom="5dip" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<ImageView android:src="@drawable/fav1" android:layout_marginRight="20dip" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
		<TextView android:text="@string/main_bookmark" android:textSize="24sp" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
		</LinearLayout>
	-->
	<LinearLayout android:id="@+id/about_row"
		android:layout_marginBottom="5dip" android:gravity="center_vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:src="@drawable/android_cn"
			android:layout_marginRight="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:text="@string/main_about"
			android:textSize="24sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:id="@+id/friend_row"
		android:layout_marginBottom="5dip" android:gravity="center_vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:src="@drawable/friends2"
			android:layout_marginRight="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:text="@string/main_friends"
			android:textSize="24sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:id="@+id/exit_row"
		android:gravity="center_vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:src="@drawable/exit"
			android:layout_marginRight="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:text="@string/main_exit"
			android:textSize="24sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
    </LinearLayout>
</LinearLayout>